--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <nav class="flex justify-around items-center" >
 <img src="assets/Group.png" alt="">
 <div>
-    <h1 class="text-3xl font-bold">$ <span>4500</span></h1>
+    <h1 class="text-3xl font-bold">$ <span id="main-blance">4500</span></h1>
     <p class="border rounded p-1">available balance</p>
 </div>
 <button class="btn">Logout</button>
@@ -65,11 +65,16 @@
                       <fieldset class="fieldset">
                         <label  class="fieldset-label">Account Number</label>
                         <input value="01301628488" id="Account-number" type="number" class="input" placeholder="Type your account number" required />
+                        <label  class="fieldset-label">Amount</label>
+                        <input  id="Amount" type="number" max="11" class="input" placeholder="Type your Amount" required/>
                         <label  class="fieldset-label">PIN</label>
                         <input value="1234" id="pin" type="text" class="input" placeholder="Type your PIN" required/>
                         <div><a class="link link-hover">Forgot password?</a></div>
-                        <button id="login-btn" class="btn btn-neutral bg-blue-700 border-none mt-4">Add Money</button>
+                        <button id="add-money" class="btn btn-neutral bg-blue-700 border-none mt-4">Add Money</button>
                       </fieldset>
+
+                      
+                      <!-- video-27-4 -->
                  
                 </form>
               </div>
@@ -80,5 +85,6 @@
     </section>
 </header>
    </section>
+   <script src="addMoney.js"></script>
 </body>
 </html>
