This is the commite for correction wrong style

--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
 <button class="btn">Logout</button>
     </nav>
     <section class="mt-10">
-        <h1 class="text-2xl font-bold mb-2"> Welcome to Payooo!</h1>
-        <p class="text-black font-medium">Enjoy easy and convernient financial services with us.
+        <h1 class="text-2xl font-bold mb-2 p-2 m-3"> Welcome to Payooo!</h1>
+        <p class="text-black font-medium p-2 m-3">Enjoy easy and convernient financial services with us.
          Cashout chage is low and</p>
         <div class="cards grid grid-cols-3 mt-14 gap-2 p-2">
             <div id="add-money-box" class="box border cursor-pointer p-4 text-center rounded-sm">
