This is the commit for utilities.js file add the project

--- a/main.html
+++ b/main.html
@@ -95,7 +95,6 @@
                 <button id="cashout-btn" class="btn btn-neutral bg-blue-700 border-none mt-4">Cashout</button>
               </fieldset>
         </div>
-        
 
     </section>
      <!-- Cash mone section end here  -->
@@ -106,5 +105,6 @@
    <script src="addMoney.js"></script>
    <script src="toggle.js"></script>
    <script src="cashOut.js"></script>
+   <script src="utlities.js"></script>
 </body>
 </html>
